# crsce

./: .checkmake.conf  .clang-tidy  .editorconfig  .gitignore  .markdownlint.jsonc  .markdownlintignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  SECURITY.md  TODO.md  go.mod  go.sum  tox.ini
.github/: dependabot.yml
Makefile.d/: build.mk  check-no-gobp.mk  clean.mk  configure.mk  cover.mk  deps.mk  hooks.mk  lint-cpp.mk  lint-make.mk  lint-md.mk  lint-py.mk  lint-sh.mk  lint-tools.mk  lint.mk  loop_constraint.mk  pgo.mk  ready.mk  test-alternating01.mk  test-alternating10.mk  test-ones.mk  test-random.mk  test-zeroes.mk  test.mk  test_uselessMachine.mk  test_uselessMachineSweep.mk  whitespace.mk
cmake/: apple.cmake  root.cmake
cmd/: main.go
docs/: CRSCE Decompression Using Combinators and Constraint-Based Search.md  CRSCE Decompression Using a Constraint.md  README.md  appendix-a-command-line-usage.md  appendix-b-experiments.md  appendix-c-open-questions.md  appendix-d-abandoned-ideas.md  build.md  decompression.md  exceptions.md  explaining_fisher_yates.md  final_paper.md  format.md  git-hooks.md  hybrid-sift-gobp.md  infeasibility-of-minimum-constraint-preserving-swap.md  o11y.md  overview.md  (+8 more)
tools/clang-plugins/OneDefinitionPerHeader/: .cpp.latest  CMakeLists.txt  Makefile  README.md  compile_commands.json
tools/clang-plugins/OneDefinitionPerHeader/src/: Action.cpp  Action.h  ClangIncludes.h  Consumer.cpp  Consumer.h  Context.cpp  Context.h  MatchCB.cpp  MatchCB.h  OneDefinitionPerHeader.cpp
(+1803 files in other folders)
